--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,6 @@ a {
   height: 200px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   width: 210px;
   margin-top: 33px;
   background-color: white;
@@ -200,15 +199,55 @@ h2 {
   gap: 30px;
 }
 
-.Activities .photos2 img {
-  width: 300px;
-  height: 380px;
-  border-radius: 20px 20px 0 0;
-  object-fit: cover;
+.Activities .photos2 {
+  display: flex;
+  flex-direction: column;
+  width: 305px;
+  border-radius: 20px;
+  background-color: white;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+  margin-bottom: 50px;
 }
+.Activities img {
+  object-fit: cover;
+  width: 100%;
+  height: 360px;
+  border-radius: 20px 20px 0 0;
+}
+
+.Activities_cards .photo_text2 {
+  margin-left: 20px;
+}
+
 .pied-de-page {
   display: flex;
   background-color: var(--main-bg-color);
+}
+.pied-de-page ul {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.pied-de-page .a-propos {
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 10px;
+}
+.pied-de-page .nos-hebergements {
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 10px;
+}
+.pied-de-page .assistance {
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 10px;
 }
 
 nav {
@@ -320,7 +359,7 @@ form .bouton {
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
-@media (max-width: 1024px) {
+@media (max-width: 1440px) {
   .hebergements-and-populaires {
     flex-direction: column;
   }
