--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,7 @@ h2 {
 
 .Activities_cards {
   display: flex;
+  justify-content: space-around;
   padding-top: 30px;
   gap: 30px;
 }
@@ -229,6 +230,7 @@ h2 {
   margin: 0;
   padding: 0;
   list-style: none;
+  gap: 10px;
 }
 
 .pied-de-page .a-propos {
@@ -361,14 +363,22 @@ form .bouton {
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1440px) {
   .hebergements-and-populaires {
+    display: flex;
     flex-direction: column;
   }
 
   .hebergements {
     width: 100%;
+    overflow: scroll;
+  }
+  .hebergement_cards {
+    display: flex;
+    justify-content: space-around;
   }
 
   .populaires {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     margin-top: 50px;
   }
@@ -390,8 +400,10 @@ form .bouton {
   .populaires-cards .card-subtitle {
     font-size: 13px;
   }
-  nav div a:hover {
-    border: none;
+
+  .Activities .photos2 {
+    width: 200px;
+    height: 360px;
   }
 }
 
@@ -400,7 +412,8 @@ form .bouton {
   nav div a:hover {
     color: #0065fc;
     border-bottom: solid 2px #0065fc;
+    border-top: none;
     padding-bottom: 20px;
     /* ... */
   }
-}
+
