--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,117 @@ a {
   color: var(--main-bg-color);
 }
 
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  /* padding-top afin de laisser un espace pour les bordures au survol  */
+}
+
+nav a {
+  margin-left: 30px;
+  /* margin left pour séparer "hebergements" avec "activités" */
+}
+nav .logo {
+  height: 20px;
+  padding-bottom: 30px;
+  /* padding-bottom afin de laisser de l'espace sous le logo */
+}
+
+nav div a:hover {
+  color: #0065fc;
+  border-top: solid 2px #0065fc;
+  padding-top: 20px;
+  /* pour créer une trait au survol */
+}
+.introduction {
+  display: flex;
+  flex-direction: column;
+  max-width: 1000px;
+}
+
+.formulaire {
+  padding-top: 18px;
+  padding-bottom: 10px;
+}
+
+.formulaire form {
+  display: flex;
+}
+form .rechercher {
+  font-weight: bold;
+  border: none;
+  border-top: solid 1px #f2f2f2;
+  border-bottom: solid 1px #f2f2f2;
+  border-left: solid 1px #f2f2f2;
+  gap: 10px;
+}
+form .bouton {
+  border: none;
+}
+
+.formulaire i {
+  height: 37px;
+  width: 50px;
+  background-color: #f2f2f2;
+  border: solid 1px #f2f2f2;
+  border-radius: 12px 0 0 12px;
+}
+
+.bouton {
+  background-color: #0065fc;
+  color: white;
+  border-radius: 0 12px 12px 0;
+  font-size: large;
+}
+
+.filtre {
+  display: flex;
+  /* "display:flex" permet d'aligner les éléments de filtre sur la même ligne */
+  align-items: center;
+  /* permet d'aligner sur la même ligne que les éléments de"filtres" */
+}
+.filtre ul {
+  font-weight: bold;
+  display: flex;
+  gap: 15px;
+}
+
+.filtre li {
+  border: solid 2px #f2f2f2;
+  border-radius: 25px;
+  height: 35px;
+  width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.filtre ul li:hover {
+  background-color: #deebff;
+}
+
+.fa-sharp {
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.info p {
+  display: flex;
+  gap: 10px;
+}
+.info i {
+  display: flex;
+  justify-content: center;
+  height: 20px;
+  width: 20px;
+  border: solid 1px rgba(242, 234, 234, 0.996);
+  border-radius: 100px;
+}
+
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
   display: flex;
@@ -84,16 +195,19 @@ a {
 }
 
 .hebergement_cards {
+  width: 760px;
+  height: 470px;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  justify-content: space-around;
 }
 
 .hebergement_cards .photos {
-  height: 200px;
+  height: 180px;
   display: flex;
   flex-direction: column;
-  width: 210px;
+  width: 225px;
   margin-top: 33px;
   background-color: white;
   border-radius: 20px;
@@ -133,8 +247,6 @@ a {
 }
 
 .Afficher h3 {
-  display: flex;
-  justify-content: flex-start;
   padding: 10px;
 }
 
@@ -252,125 +364,19 @@ h2 {
   padding-bottom: 10px;
 }
 
-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding-top: 30px;
-  /* padding-top afin de laisser un espace pour les bordures au survol  */
-}
-
-nav a {
-  margin-left: 50px;
-  /* margin left pour séparer "hebergements" avec "activités" */
-}
-nav .logo {
-  height: 20px;
-  padding-bottom: 30px;
-  /* padding-bottom afin de laisser de l'espace sous le logo */
-}
-
-nav div a:hover {
-  color: #0065fc;
-  border-top: solid 2px #0065fc;
-  padding-top: 20px;
-  /* pour créer une trait au survol */
-}
-
-.formulaire {
-  padding-top: 18px;
-  padding-bottom: 10px;
-}
-
-.formulaire form {
-  display: flex;
-}
-form .rechercher {
-  border: none;
-  border-top: solid 1px #f2f2f2;
-  border-bottom: solid 1px #f2f2f2;
-  border-left: solid 1px #f2f2f2;
-  gap: 10px;
-}
-form .bouton {
-  border: none;
-}
-
-.formulaire i {
-  height: 37px;
-  width: 4%;
-  background-color: #f2f2f2;
-  border: solid 1px #f2f2f2;
-  border-radius: 12px 0 0 12px;
-}
-
-.bouton {
-  background-color: #0065fc;
-  color: white;
-  border-radius: 0 12px 12px 0;
-  font-size: large;
-}
-
-.filtre {
-  display: flex;
-  /* "display:flex" permet d'aligner les éléments de filtre sur la même ligne */
-  align-items: center;
-  /* permet d'aligner sur la même ligne que les éléments de"filtres" */
-}
-.filtre ul {
-  font-weight: bold;
-  display: flex;
-  gap: 15px;
-}
-
-.filtre li {
-  border: solid 2px #f2f2f2;
-  border-radius: 25px;
-  height: 35px;
-  width: 150px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
-.filtre ul li:hover {
-  background-color: #deebff;
-}
-
-.fa-sharp {
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.info p {
-  display: flex;
-  gap: 10px;
-}
-.info i {
-  display: flex;
-  justify-content: center;
-  height: 20px;
-  width: 20px;
-  border: solid 1px rgba(242, 234, 234, 0.996);
-  border-radius: 100px;
-}
-
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
-@media (max-width: 1440px) {
+@media screen and (max-width: 1440px) {
+  .main-container {
+    width: 90%;
+  }
   .hebergements-and-populaires {
     display: flex;
     flex-direction: column;
   }
 
-  .hebergements {
-    width: 100%;
-    overflow: scroll;
-  }
   .hebergement_cards {
     display: flex;
     justify-content: space-around;
@@ -408,7 +414,10 @@ form .bouton {
 }
 
 /* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
+@media screen and (max-width: 767.98px) {
+  .main-container {
+    width: 100%;
+  }
   nav div a:hover {
     color: #0065fc;
     border-bottom: solid 2px #0065fc;
@@ -416,4 +425,66 @@ form .bouton {
     padding-bottom: 20px;
     /* ... */
   }
+  header {
+    padding: 20px 20px;
+    width: 100%;
+  }
 
+  header nav {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  nav a {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .menu {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  main .introduction {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  main p {
+    display: flex;
+  }
+  main .filtre {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .filtre ul {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .info p {
+    width: 350px;
+    display: flex;
+  }
+  .hebergements-and-populaires {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .populaires {
+    width: 340px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .populaires-cards {
+    display: flex;
+    flex-direction: column;
+  }
+  .populaires-cards img {
+  }
+
+  .populaires-cards .card {
+    display: flex;
+    width: 285px;
+    flex-direction: row;
+  }
+}
