--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,6 @@ nav div a:hover {
 .introduction {
   display: flex;
   flex-direction: column;
-  max-width: 1000px;
 }
 
 .formulaire {
@@ -172,20 +171,20 @@ form .bouton {
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
   display: flex;
-  justify-content: space-between;
+  gap: 40px;
 }
 
 .hebergements-and-populaires section {
   background-color: var(--main-bg-color);
   border-radius: 20px;
-  padding: 30px;
+  padding: 20px;
   box-sizing: border-box;
 }
 
 /****** Hebergements ***********/
 .hebergements {
   height: 620px;
-  width: 800px;
+  width: 850px;
 }
 
 .hebergement-title {
@@ -195,9 +194,10 @@ form .bouton {
 }
 
 .hebergement_cards {
-  width: 760px;
+  width: 800px;
   height: 470px;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   gap: 10px;
   justify-content: space-around;
@@ -207,7 +207,7 @@ form .bouton {
   height: 180px;
   display: flex;
   flex-direction: column;
-  width: 225px;
+  width: 250px;
   margin-top: 33px;
   background-color: white;
   border-radius: 20px;
@@ -350,6 +350,7 @@ h2 {
   display: flex;
   flex-direction: column;
   padding-bottom: 10px;
+  margin-left: 10px;
 }
 .pied-de-page .nos-hebergements {
   width: 450px;
@@ -368,9 +369,12 @@ h2 {
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 1024px) {
   .main-container {
-    width: 90%;
+    width: 1024px;
+  }
+  .hebergements {
+    width: 920px;
   }
   .hebergements-and-populaires {
     display: flex;
@@ -385,7 +389,7 @@ h2 {
   .populaires {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 920px;
     margin-top: 50px;
   }
 
@@ -406,10 +410,24 @@ h2 {
   .populaires-cards .card-subtitle {
     font-size: 13px;
   }
+  .Activities-in-Marseille {
+    width: 925px;
+    height: 390px;
+  }
+  .Activities_cards {
+    width: 195px;
+    height: 270px;
+    display: flex;
+    justify-content: flex-start;
+  }
 
   .Activities .photos2 {
-    width: 200px;
-    height: 360px;
+    width: 190px;
+    height: 270px;
+  }
+  .Activities img {
+    width: 192px;
+    height: 200px;
   }
 }
 
