--- a/css/style.css
+++ b/css/style.css
@@ -171,8 +171,8 @@ form .bouton {
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
   display: flex;
-  flex-wrap: wrap;
   gap: 40px;
+  flex-wrap: wrap;
 }
 
 .hebergements-and-populaires section {
@@ -363,12 +363,14 @@ h2 {
   display: flex;
   flex-direction: column;
   padding-bottom: 10px;
+  margin-left: 10px;
 }
 .pied-de-page .assistance {
   width: 450px;
   display: flex;
   flex-direction: column;
   padding-bottom: 10px;
+  margin-left: 10px;
 }
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
@@ -376,11 +378,8 @@ h2 {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media screen and (max-width: 1024px) {
-  .main-container {
-    width: 1024px;
-  }
   .hebergements {
-    width: 920px;
+    width: 100%;
   }
   .hebergements-and-populaires {
     display: flex;
@@ -390,12 +389,16 @@ h2 {
   .hebergement_cards {
     display: flex;
     justify-content: space-around;
+    width: 100%;
+  }
+  .hebergement_cards .photos {
+    width: 100%;
   }
 
   .populaires {
     display: flex;
     flex-direction: column;
-    width: 920px;
+    width: 100%;
     margin-top: 50px;
   }
 
@@ -415,6 +418,9 @@ h2 {
 
   .populaires-cards .card-subtitle {
     font-size: 13px;
+  }
+  .Activities-in-Marseille .Activities_cards {
+    width: 100%;
   }
   .Activities-in-Marseille {
     width: 925px;
@@ -471,10 +477,12 @@ h2 {
     justify-content: space-between;
     align-items: center;
   }
+
   main .introduction {
     display: flex;
     flex-wrap: wrap;
   }
+
   main p {
     display: flex;
   }
@@ -491,9 +499,25 @@ h2 {
     width: 350px;
     display: flex;
   }
+  .hebergements {
+    display: flex;
+    height: auto;
+    width: 324px;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
   .hebergements-and-populaires {
     display: flex;
     flex-direction: column-reverse;
+  }
+  .hebergement_cards {
+    display: flex;
+    width: auto;
+    height: auto;
+    flex-wrap: nowrap;
+  }
+  .hebergement_cards .photos {
+    display: flex;
   }
   .populaires {
     width: 340px;
@@ -509,5 +533,30 @@ h2 {
     display: flex;
     width: 285px;
     flex-direction: row;
+  }
+  .Activities-in-Marseille {
+    display: flex;
+    width: 324px;
+    height: auto;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .Activities_cards {
+    display: flex;
+    width: 324px;
+    height: auto;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .Activities .photos2 {
+    width: auto;
+    height: 200px;
+  }
+  .Activities img {
+    width: 324px;
+  }
+  .pied-de-page {
+    display: flex;
+    flex-direction: column;
   }
 }
