--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,9 @@
 .fa-solid {
   color: var(--main-color);
 }
-
 body {
-  display: flex;
-  justify-content: center;
+  min-width: 324px;
+  max-width: 1440px;
 }
 
 .main-container {
@@ -139,7 +138,6 @@ form .bouton {
   border: solid 2px #f2f2f2;
   border-radius: 25px;
   height: 35px;
-  width: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -320,6 +318,10 @@ h2 {
   flex-wrap: nowrap;
   flex-direction: row;
 }
+.Activities a {
+  width: 100%;
+  height: 100%;
+}
 
 .Activities .photos2 {
   display: flex;
@@ -456,7 +458,11 @@ h2 {
 /* Small devices (phones, less than 768px) */
 @media screen and (max-width: 767.98px) {
   .main-container {
-    width: 100%;
+    padding: 0;
+    min-width: 324px;
+  }
+  nav .logo {
+    padding-top: 30px;
   }
   nav div a:hover {
     color: #0065fc;
@@ -466,7 +472,6 @@ h2 {
     /* ... */
   }
   header {
-    padding: 20px 20px;
     width: 100%;
   }
 
@@ -483,19 +488,17 @@ h2 {
   .menu {
     width: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-around;
+    padding-bottom: 20px;
   }
   main {
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
 
   main .introduction {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
   }
 
   main p {
@@ -509,19 +512,30 @@ h2 {
   .filtre ul {
     display: flex;
     flex-wrap: wrap;
+    padding: 0;
   }
   .info p {
     width: 350px;
     display: flex;
   }
+  h2 {
+    width: 100%;
+  }
   .hebergements {
     display: flex;
     height: auto;
-    width: 324px;
+    width: 100%;
     flex-direction: column;
     flex-wrap: nowrap;
   }
+  .hebergement-title {
+    width: 100%;
+  }
+  .hebergements#background {
+    background-color: white;
+  }
   .hebergements-and-populaires {
+    width: 100%;
     display: flex;
     flex-direction: column-reverse;
   }
@@ -534,11 +548,18 @@ h2 {
   }
   .hebergement_cards .photos {
     display: flex;
+    width: 100%;
   }
   .populaires {
-    width: 340px;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
+  }
+  .populaires#corner {
+    border-radius: 0;
+  }
+  .populaires-title {
+    width: 100%;
   }
   .populaires-cards {
     display: flex;
@@ -547,7 +568,7 @@ h2 {
 
   .populaires-cards .card {
     display: flex;
-    width: 285px;
+    width: 320%;
     flex-direction: row;
   }
   .Activities-in-Marseille {
@@ -556,6 +577,10 @@ h2 {
     height: auto;
     flex-direction: column;
     flex-wrap: nowrap;
+  }
+  .Activities {
+    display: flex;
+    align-items: center;
   }
   .Activities_cards {
     display: flex;
