--- a/css/style.css
+++ b/css/style.css
@@ -544,14 +544,16 @@ h2 {
     padding-left: 20px;
   }
   .formulaire .fa-magnifying-glass {
+    border: none;
     border-radius: 12px;
     background: #0065fc;
   }
   .formulaire form {
     display: flex;
   }
-  .button {
-    background: none;
+
+  .button .button_loupe {
+    display: flex;
   }
   .button_loupe {
     display: flex;
@@ -598,12 +600,17 @@ h2 {
   }
   .hebergement_cards {
     display: flex;
+    width: 230%;
+    align-items: center;
     flex-direction: column;
   }
   .hebergement_cards .photos {
     display: flex;
-    width: 200%;
+    width: 100%;
     height: 100%;
+  }
+  .Afficher {
+    display: flex;
   }
   .populaires {
     width: 100%;
@@ -668,8 +675,9 @@ h2 {
     display: flex;
   }
   .pied-de-page {
+    width: 100%;
     display: flex;
-    padding-left: 20px;
+    align-items: center;
     flex-direction: column;
   }
 }
