--- a/css/style.css
+++ b/css/style.css
@@ -325,13 +325,11 @@ h2 {
 }
 
 .Activities_cards {
-  display: flex;
   padding-top: 30px;
-  gap: 30px;
-  flex-wrap: nowrap;
-  flex-direction: row;
 }
 .Activities a {
+  display: flex;
+  gap: 30px;
   width: 100%;
   height: 100%;
 }
@@ -443,10 +441,6 @@ h2 {
   .Activities {
     width: 100%;
   }
-  .Activities-in-Marseille {
-    width: 100%;
-    height: 390px;
-  }
   .Activities_cards {
     width: 100%;
     height: 270px;
@@ -470,6 +464,11 @@ h2 {
 
 /* Small devices (phones, less than 768px) */
 @media screen and (max-width: 767.98px) {
+  .main-container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   nav .logo {
     padding-top: 30px;
   }
@@ -597,14 +596,18 @@ h2 {
     display: flex;
     flex-direction: column-reverse;
   }
+  .hebergements a {
+    width: 100%;
+  }
   .hebergement_cards {
     display: flex;
-    width: 230%;
+    width: 100%;
     align-items: center;
     flex-direction: column;
   }
   .hebergement_cards .photos {
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
   }
@@ -647,7 +650,7 @@ h2 {
   }
   .Activities a {
     display: flex;
-    width: 70%;
+    flex-direction: column;
   }
   .Activities_cards {
     display: flex;
@@ -663,7 +666,6 @@ h2 {
     background-color: white;
     filter: drop-shadow(0 3px 15px rgba(0, 0, 0, 0.1));
     border-radius: 20px;
-    margin: 20px;
   }
   .Activities img {
     object-fit: cover;
