--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,7 @@ h2 {
     flex-wrap: wrap;
   }
   .introduction p {
-    width: 100%;
+    width: 95%;
     padding-left: 20px;
   }
 
@@ -549,6 +549,7 @@ h2 {
   }
   .formulaire form {
     display: flex;
+    margin-left: 10px;
   }
   .button {
     border-radius: 15px;
@@ -575,7 +576,7 @@ h2 {
     padding-left: 20px;
   }
   h2 {
-    width: 100%;
+    width: 95%;
     padding-left: 20px;
     padding-top: 20px;
   }
@@ -614,9 +615,6 @@ h2 {
     width: 100%;
     height: 100%;
   }
-  .Afficher {
-    display: flex;
-  }
   .populaires {
     width: 100%;
     display: flex;
@@ -640,6 +638,9 @@ h2 {
     display: flex;
     width: 335%;
     flex-direction: row;
+  }
+  .Afficher h3 {
+    margin-right: 170px;
   }
   .Activities-in-Marseille {
     display: flex;
