--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,9 @@
 }
 
 body {
+  overflow-x: hidden;
   margin-right: auto;
   margin-left: auto;
-  min-width: 320px;
   max-width: 1440px;
 }
 
@@ -327,6 +327,7 @@ h2 {
 
 .Activities_cards {
   padding-top: 30px;
+  padding-bottom: 30px;
 }
 .Activities a {
   display: flex;
@@ -467,7 +468,7 @@ h2 {
   body {
     width: 100%;
     position: absolute;
-    margin-right: auto;
+    margin: auto;
   }
   .main-container {
     padding: 0;
@@ -521,6 +522,7 @@ h2 {
     align-items: center;
   }
   main .filtre {
+    padding-left: 10px;
     display: flex;
     flex-wrap: wrap;
   }
@@ -575,6 +577,7 @@ h2 {
   form .button_search {
     display: none;
   }
+
   .filtre li {
     width: 40%;
   }
@@ -615,13 +618,14 @@ h2 {
     flex-direction: column-reverse;
   }
   .hebergements a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
   }
   .hebergement_cards {
     display: flex;
     width: 315px;
-    margin-left: auto;
-    margin-right: auto;
     flex-direction: column;
   }
   .hebergement_cards .photos {
@@ -644,14 +648,15 @@ h2 {
     width: 100%;
   }
   .populaires-cards a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
   }
   .populaires-cards {
     width: 315px;
     display: flex;
     flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .populaires-cards .card {
@@ -686,14 +691,13 @@ h2 {
   .Activities a {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
   .Activities_cards {
     display: flex;
     width: 315px;
     height: auto;
-    margin-right: auto;
-    margin-left: auto;
   }
 
   .Activities .photos2 {
