--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,13 @@ nav div a:hover {
 .introduction {
   display: flex;
   flex-direction: column;
+  gap: 8px;
+}
+.introduction h1 {
+  margin: 0;
+}
+.introduction p {
+  margin: 0;
 }
 
 .formulaire {
@@ -138,6 +145,9 @@ form .bouton {
   /* "display:flex" permet d'aligner les éléments de filtre sur la même ligne */
   align-items: center;
   /* permet d'aligner sur la même ligne que les éléments de"filtres" */
+}
+.filtre h2 {
+  font-size: 18px;
 }
 .filtre ul {
   padding-left: 10px;
