--- a/css/style.css
+++ b/css/style.css
@@ -522,6 +522,7 @@ h2 {
     display: flex;
     justify-content: space-around;
     border-bottom: solid 1px #f2f2f2;
+    margin-bottom: 20px;
   }
   main {
     display: flex;
