--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,15 @@ body {
   margin-right: auto;
   margin-left: auto;
   max-width: 1440px;
+  padding: 0;
+
 }
 
 .main-container {
   max-width: 1440px;
   padding: 0 50px;
   box-sizing: border-box;
+
 }
 
 a {
@@ -34,6 +37,7 @@ a {
 .section-title {
   margin: 0;
   font-size: 22px;
+
 }
 
 .card {
@@ -41,10 +45,12 @@ a {
   border-radius: 20px;
   padding: 5px;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+  margin-top: 33px;
 }
 
 .card img {
   object-fit: cover;
+
 }
 
 .card-title {
@@ -65,16 +71,19 @@ nav {
   justify-content: space-between;
   align-items: center;
   /* padding-top afin de laisser un espace pour les bordures au survol  */
+  padding-top: 20px;
 }
 
 nav a {
   margin-left: 30px;
   /* margin left pour séparer "hebergements" avec "activités" */
+
 }
 nav .logo {
   height: 20px;
   padding-bottom: 30px;
   /* padding-bottom afin de laisser de l'espace sous le logo */
+
 }
 
 nav div a:hover {
@@ -83,16 +92,22 @@ nav div a:hover {
   padding-top: 20px;
   /* pour créer une trait au survol */
 }
+
 .introduction {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  /* padding-top et padding-bottom pour laisser de l'espace en haut et en bas de la section introduction */
 }
 .introduction h1 {
   margin: 0;
+
 }
 .introduction p {
   margin: 0;
+  font-size: 16px;
 }
 
 .formulaire {
@@ -103,6 +118,7 @@ nav div a:hover {
 
 .formulaire form {
   display: flex;
+  
 }
 form .rechercher {
   font-weight: bold;
@@ -114,6 +130,13 @@ form .rechercher {
 }
 form .bouton {
   border: none;
+  background-color: #0065fc;
+  color: white;
+  border-radius: 0 12px 12px 0;
+  font-size: large;
+  padding: 10px;
+  width: 50px;
+  height: 37px;
 }
 
 .formulaire i {
